--- a/index.html
+++ b/index.html
@@ -14,79 +14,72 @@
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- must remove filler data -->
     
     <!-- header -->
-    <header>weather Dashboard</header>
+    <header class="nav justify-content-center text-bg-success p-3">weather Dashboard</header>
 
     <!-- search section  -->
-    <!-- 
-        vertical
-        'search for city'
-        search bar
-        search button
-        break
-        history of search results?
-    -->
-    <section>
-        <h1>search for a city</h1>
-        <form action="">
-            <input type="text">
-        </form>
-        <button>search</button>
-        <br> <!-- create break line basicly -->
-        <ul>
-            <li><button>previous search</button></li>
-            <li><button>previous search</button></li>
-            <li><button>previous search</button></li>
-        </ul>
+    <section id="content" class="container-fluid">
+        <div class="row">
+            <aside id="citySearch" class="col-lg-3 bg-light">
+                <h1>search for a city</h1>
+                <input id="searchBar" type="text" placeholder="Enter a city" class="form-control">
+                <div class="d-grid">
+                    <button class="btn btn-success" type="button">Button</button>
+                </div>
+                <br> <!-- create break line basicly -->
+                <form id="searchHistory">
+                    <input type="text" readonly="true" class="form-control d-block bg-light" value="salt lake city">
+                </form>
+            </aside>
 
-    </section>
-
-    <!-- info section -->
-    <!-- 
-        top part:
-        current day + all weather atributes needed, humity all that
-
-        bottom part:
-        '5 day forcast'
-        days 2-5 with all required info
-    -->
-    <section>
-        <div class="day1">
-            <p class="cityName">lorem</p>
-            <p class="currentTemp">lorem</p>
-            <p class="currentWind">lorem</p>
-            <p class="currentHumitity">lorem</p>
-        </div>
-        <p>5-Day Forecast</p>
-        <div class="futureDays">
-            <div class="day2">
-                <div class="date">lorem</div>
-                <div class="icon">lorem</div>
-                <div class="temp">lorem</div>
-                <div class="wind">lorem</div>
-                <div class="humidity">lorem</div>
-            </div>
-            <div class="day3">
-                <div class="date">lorem</div>
-                <div class="icon">lorem</div>
-                <div class="temp">lorem</div>
-                <div class="wind">lorem</div>
-                <div class="humidity">lorem</div>
-            </div>
-            <div class="day4">
-                <div class="date">lorem</div>
-                <div class="icon">lorem</div>
-                <div class="temp">lorem</div>
-                <div class="wind">lorem</div>
-                <div class="humidity">lorem</div>
-            </div>
-            <div class="day5">
-                <div class="date">lorem</div>
-                <div class="icon">lorem</div>
-                <div class="temp">lorem</div>
-                <div class="wind">lorem</div>
-                <div class="humidity">lorem</div>
+            <!-- info section -->
+            <div id="weatherDisplay" class="col ">
+                <div class="row mr-0">
+                    <div class="col-lg-11 card m-3" id="today-weather">
+                        <div class="day1 card-body">
+                            <div class="nameIcon">
+                                <p class="city-name">slc (12/2/2022)</p>
+                                <img id="current-pic" alt="snow" class="" src="https://openweathermap.org/img/wn/13d@2x.png">
+                            </div>
+                            <p class="currentTemp">lorem</p>
+                            <p class="currentWind">lorem</p>
+                            <p class="currentHumitity">lorem</p>
+                        </div>
+                    </div>
+                </div>
+                <p>5-Day Forecast</p>
+                <div class="futureDays container row">
+                    <div class="day2 col-md-2 forecast bg-primary text-white m-2 rounded">
+                        <p class="mt-3 mb-0 forecast-date">12/3/2022</p>
+                        <img class="icon" src="https://openweathermap.org/img/wn/04n@2x.png">
+                        <p class="temp">Temp: 22 °F</p>
+                        <p class="wind">600 mph</p>
+                        <p class="humidity">Humidity: 76%</p>
+                    </div>
+                    <div class="day3 col-md-2 forecast bg-primary text-white m-2 rounded">
+                        <div class="date">lorem</div>
+                        <div class="icon">lorem</div>
+                        <div class="temp">lorem</div>
+                        <div class="wind">lorem</div>
+                        <div class="humidity">lorem</div>
+                    </div>
+                    <div class="day4 col-md-2 forecast bg-primary text-white m-2 rounded">
+                        <div class="date">lorem</div>
+                        <div class="icon">lorem</div>
+                        <div class="temp">lorem</div>
+                        <div class="wind">lorem</div>
+                        <div class="humidity">lorem</div>
+                    </div>
+                    <div class="day5 col-md-2 forecast bg-primary text-white m-2 rounded">
+                        <div class="date">lorem</div>
+                        <div class="icon">lorem</div>
+                        <div class="temp">lorem</div>
+                        <div class="wind">lorem</div>
+                        <div class="humidity">lorem</div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
