--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/style.css">
     <script defer src="assets/script.js"></script>
     <!-- jquery -->
-    <script defer src="https://code.jquery.com/jquery-3.5.0.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
@@ -30,7 +30,7 @@
                 </div>
                 <br> <!-- create break line basicly -->
                 <form id="searchHistory">
-                    <input type="text" readonly="true" class="form-control d-block bg-light" value="salt lake city">
+                    <input type="text" readonly="true" class="form-control d-block bg-light" value="">
                 </form>
             </aside>
 
@@ -40,44 +40,44 @@
                     <div class="col-lg-11 card m-3" id="today-weather">
                         <div class="day1 card-body">
                             <div class="nameIcon">
-                                <p class="city-name">slc (12/2/2022)</p>
-                                <img id="current-pic" alt="snow" class="" src="https://openweathermap.org/img/wn/13d@2x.png">
+                                <p class="city-name"></p>
+                                <img id="current-pic" class="" src="">
                             </div>
-                            <p class="currentTemp">lorem</p>
-                            <p class="currentWind">lorem</p>
-                            <p class="currentHumitity">lorem</p>
+                            <p class="currentTemp"></p>
+                            <p class="currentWind"></p>
+                            <p class="currentHumitity"></p>
                         </div>
                     </div>
                 </div>
                 <p>5-Day Forecast</p>
                 <div class="futureDays container row">
                     <div class="day2 col-md-2 forecast bg-primary text-white m-2 rounded">
-                        <p class="mt-3 mb-0 forecast-date">12/3/2022</p>
-                        <img class="icon" src="https://openweathermap.org/img/wn/04n@2x.png">
-                        <p class="temp">Temp: 22 °F</p>
-                        <p class="wind">600 mph</p>
-                        <p class="humidity">Humidity: 76%</p>
+                        <p class="mt-3 mb-0 forecast-date"></p>
+                        <img class="icon" src="">
+                        <p class="temp"></p>
+                        <p class="wind"></p>
+                        <p class="humidity"></p>
                     </div>
                     <div class="day3 col-md-2 forecast bg-primary text-white m-2 rounded">
-                        <div class="date">lorem</div>
-                        <div class="icon">lorem</div>
-                        <div class="temp">lorem</div>
-                        <div class="wind">lorem</div>
-                        <div class="humidity">lorem</div>
+                        <div class="date"></div>
+                        <div class="icon"></div>
+                        <div class="temp"></div>
+                        <div class="wind"></div>
+                        <div class="humidity"></div>
                     </div>
                     <div class="day4 col-md-2 forecast bg-primary text-white m-2 rounded">
-                        <div class="date">lorem</div>
-                        <div class="icon">lorem</div>
-                        <div class="temp">lorem</div>
-                        <div class="wind">lorem</div>
-                        <div class="humidity">lorem</div>
+                        <div class="date"></div>
+                        <div class="icon"></div>
+                        <div class="temp"></div>
+                        <div class="wind"></div>
+                        <div class="humidity"></div>
                     </div>
                     <div class="day5 col-md-2 forecast bg-primary text-white m-2 rounded">
-                        <div class="date">lorem</div>
-                        <div class="icon">lorem</div>
-                        <div class="temp">lorem</div>
-                        <div class="wind">lorem</div>
-                        <div class="humidity">lorem</div>
+                        <div class="date"></div>
+                        <div class="icon"></div>
+                        <div class="temp"></div>
+                        <div class="wind"></div>
+                        <div class="humidity"></div>
                     </div>
                 </div>
             </div>
