--- a/index.html
+++ b/index.html
@@ -31,55 +31,54 @@
                 <h1>search for a city</h1>
                 <input id="searchBar" type="text" placeholder="Enter a city" class="form-control">
                 <div class="d-grid">
-                    <button class="btn btn-success" type="button">Button</button>
+                    <button id="searchButton" class="btn btn-success" type="button">Search Weather</button>
                 </div>
                 <br> <!-- create break line basicly -->
-                <form id="searchHistory">
-                    <input type="text" readonly="true" class="form-control d-block bg-light" value="">
-                </form>
+                <div id="searchHistory">
+                    <button class="col-lg-11 card m-3">testing</button>
+                </div>
             </aside>
 
             <!-- info section -->
             <div id="weatherDisplay" class="col ">
                 <div class="row mr-0">
-                    <div class="col-lg-11 card m-3" id="today-weather">
-                        <div class="day1 card-body">
-                            <div class="nameIcon">
-                                <p class="city-name"></p>
-                                <img id="current-pic" class="" src="">
-                            </div>
-                            <p class="currentTemp"></p>
-                            <p class="currentWind"></p>
-                            <p class="currentHumitity"></p>
+                    <div class="col-lg-11 card m-3">
+                        <div id="day1" class="day1 card-body">
+                            <div class="city"></div>
+                            <div class="date"></div>
+                            <img src="" class="icon" alt="icon for current weather conditions">
+                            <div class="temp"></div>
+                            <div class="wind"></div>
+                            <div class="humidity"></div>
                         </div>
                     </div>
                 </div>
                 <p>5-Day Forecast</p>
                 <div class="futureDays container row">
-                    <div class="day2 col-md-2 forecast bg-primary text-white m-2 rounded">
-                        <p class="mt-3 mb-0 forecast-date"></p>
-                        <img class="icon" src="">
-                        <p class="temp"></p>
-                        <p class="wind"></p>
-                        <p class="humidity"></p>
-                    </div>
-                    <div class="day3 col-md-2 forecast bg-primary text-white m-2 rounded">
+                    <div id="day2" class="day2 col-md-2 forecast bg-primary text-white m-2 rounded">
                         <div class="date"></div>
-                        <div class="icon"></div>
+                        <img src="" class="icon" alt="icon for current weather conditions">
                         <div class="temp"></div>
                         <div class="wind"></div>
                         <div class="humidity"></div>
                     </div>
-                    <div class="day4 col-md-2 forecast bg-primary text-white m-2 rounded">
+                    <div id="day3" class="day3 col-md-2 forecast bg-primary text-white m-2 rounded">
                         <div class="date"></div>
-                        <div class="icon"></div>
+                        <img src="" class="icon" alt="icon for current weather conditions">
                         <div class="temp"></div>
                         <div class="wind"></div>
                         <div class="humidity"></div>
                     </div>
-                    <div class="day5 col-md-2 forecast bg-primary text-white m-2 rounded">
+                    <div id="day4" class="day4 col-md-2 forecast bg-primary text-white m-2 rounded">
                         <div class="date"></div>
-                        <div class="icon"></div>
+                        <img src="" class="icon" alt="icon for current weather conditions">
+                        <div class="temp"></div>
+                        <div class="wind"></div>
+                        <div class="humidity"></div>
+                    </div>
+                    <div id="day5" class="day5 col-md-2 forecast bg-primary text-white m-2 rounded">
+                        <div class="date"></div>
+                        <img src="" class="icon" alt="icon for current weather conditions">
                         <div class="temp"></div>
                         <div class="wind"></div>
                         <div class="humidity"></div>
