--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>weather app</title>
     <link rel="stylesheet" href="assets/style.css">
     <script defer src="assets/script.js"></script>
     <!-- jquery -->
@@ -36,9 +36,6 @@
                     </div>
                 </form>
                 <br> <!-- create break line basicly -->
-                <div id="searchHistory">
-                    <button onclick="recallSearch(event)" class="col-lg-11 card m-3 recall">testing</button>
-                </div>
             </aside>
 
             <!-- info section -->
